--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.1",
     "@trendyol-js/react-carousel": "^3.0.0",
     "animate.css": "^4.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.2",
-    "react-slick": "^0.29.0"
+    "react-slick": "^0.29.0",
+    "react-smooth-scroll-hook": "^1.3.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
